--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,13 @@
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-core</artifactId>
 			<version>${jmh.version}</version>
-			<scope>test</scope>
+		<!--	<scope>test</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-generator-annprocess</artifactId>
 			<version>${jmh.version}</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 			<!--<scope>provided</scope>-->
 		</dependency>
 		<!-- JMH 多线程基准测试套件 TEST END-->
